# Capacity_Planning_Digital_Twin

./: .gitignore  README.md  main.py  pyproject.toml
agentic/: __init__.py
agentic/agents/: base_agent.py  config.py  domain_agents.py  orchestrator.py  router.py  state.py  test_agents.py
agentic/mcp_server/: __init__.py  db.py  server.py  test_server.py
agentic/mcp_server/tools/: __init__.py  capacity_tools.py  capex_tools.py  forecast_tools.py  maintenance_tools.py  query_tool.py  schema_tools.py  (+1 more)
backend/: main.py  models.py
backend/explorer/: __init__.py  main.py
config/: constants.py  settings.yaml
docs/ai-enablement/: agentic-architecture.md  agents.md  mcp-server.md
docs/architecture/: system-architecture.md  tech-stack.md
docs/data-engineering/: bronze.md  data-generation.md  gold.md  pipeline-overview.md  silver.md
docs/ml/: capex-montecarlo.md  demand-forecasting.md  ml-overview.md  oee-anomaly.md  predictive-maintenance.md  yield-prediction.md
docs/technical-reference/: capacity-planning.md
frontend/: app.js  index.html  style.css
frontend/explorer/: explorer.css  explorer.js  index.html
models/: demand_lgbm.pkl  demand_xgb.pkl  maintenance_xgb.pkl  oee_isolation_forest.pkl  yield_xgb.pkl
src/generators/: assignment_matrix.py  demand_forecast.py  mi_execution.py  mi_logs.py  mi_test_param.py  product_master.py  reference_data.py  run_all_generators.py  site_equipment_inventory.py  site_soft.py  target_test_time.py  target_yield.py
src/ml/: run_ml.py
src/utils/: db_utils.py  logger.py  ml_utils.py  month_utils.py  spark_utils.py
(+18 files in other folders)
